--- a/Font-end/src/components/UserComponents/Signup/Signup.css
+++ b/Font-end/src/components/UserComponents/Signup/Signup.css
@@ -93,8 +93,10 @@ body {
     display: block;
     text-decoration: none;
     color: #757575;
+    cursor: pointer;
 }
 
 .login-aTag:hover{
     text-decoration: underline #3DFF3F;
+    color: white;
 }
