--- a/Font-end/src/components/UserComponents/Home/Home.css
+++ b/Font-end/src/components/UserComponents/Home/Home.css
@@ -1,4 +1,3 @@
-
 * {
     font-family: 'Poppins', sans-serif;
     transition: 1s ease;
@@ -14,7 +13,7 @@
     padding: 50px;
     border-radius: 15px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    
+
 
 }
 
@@ -32,4 +31,19 @@
 .submit-button-home:hover {
     background-color: #252525;
     color: #3DFF3F;
+}
+
+.logout-button-home {
+    background-color: #c204bfaf;
+    font-weight: 600;
+    border: 0;
+    margin-top: 20px;
+    height: 35px;
+    width: 70%;
+    border-radius: 7px;
+}
+
+.logout-button-home:hover {
+    background-color: #636363;
+    color: #C204C0;
 }
