--- a/Font-end/src/components/UserComponents/Login/Login.css
+++ b/Font-end/src/components/UserComponents/Login/Login.css
@@ -6,7 +6,8 @@
 }
 
 body {
-    background-image: url(../../../../public/assets/images/pexels-buchkiste-4834961.jpg);
+    background-image: url(../../../../public/assets/images/pexels-buchkiste-4834961.jpg) ;
+    background-size: cover;
     padding: 20px;
     display: flex;
     justify-content: center;
@@ -27,19 +28,14 @@ body {
     align-items: center;
     text-align: center;
     justify-content: center;
-    padding: 50px;
+    padding: 40px;
     border-radius: 15px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    filter: blur(2px) invert();
     transition: 0.6s ease;
-    transform: rotate(-1deg);
-
 }
 
 .main-div:hover {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    transform: scale(1.01);
-    filter: none;
 }
 
 .signup-input {
